Add old driver in as a compatibility layer

--- a/configure.ac
+++ b/configure.ac
@@ -83,5 +83,6 @@ AC_CONFIG_FILES([
                 Makefile
                 src/Makefile
 		src/uxa/Makefile
+		src/compat/Makefile
 ])
 AC_OUTPUT
