Update README for gitlab migration
Signed-off-by: Alan Coopersmith <alan.coopersmith@oracle.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -32,7 +32,7 @@ ChangeLog:
 dist-hook: ChangeLog INSTALL
 
 EXTRA_DIST = \
-	README			\
+	README.md		\
 	README.xspice
 
 DISTCHECK_CONFIGURE_FLAGS=--enable-xspice
